# temporal-index

./: .dockerignore  .gitignore  .lintr  Cargo.toml  Dockerfile  Justfile  Makefile  README.md  _drake.R  build.rs  dockerrun  flake.nix  mixed_query_workloads.jl  run-parallel.sh  temporal-index-results.sqlite
R/: functions.R  latex.R  packages.R  parallel.R  plan.R  plots.R  references.bib  report.Rmd  style.css  tables.R  workloads.R
d3/: best.csv  index.html  package-lock.json
docs/: best.csv  ember.scss  index.html  index.qmd
example_rdindex/: cell_info.csv  column_info.csv  example_dataset.csv
experiments/: all.yml  conference.yml  debug.yml  focus-parallel.yml  focus.yml  insertion.yml  parallel-queries.yml  parallel.yml  param_influence.yml  real-world.yml  real.yml  scalability.yml  scalability_n.yml  scalability_n_conference.yml
paper/: .gitignore  example-grid.tex  example-plane.tex  example-table.tex  example.tex  qps.tex  references.bib  temporal-index.tex
paper/images/: partition-example.tikz  styles.tikzstyles
src/: algorithms.rs  btree.rs  configuration.rs  dataset.rs  ebi.rs  grid.rs  grid3d.rs  interval_tree.rs  main.rs  naive.rs  nested_btree.rs  nested_vecs.rs  period_index.rs  period_index_plusplus.rs  reporter.rs  test.rs  types.rs  zipf.rs
src/algorithms/: btree.rs  ebi.rs  grid.rs  grid3d.rs  grid_file.rs  interval_tree.rs  naive.rs  nested_btree.rs  nested_vecs.rs  period_index.rs  period_index_old.rs  period_index_plusplus.rs  rd_index.rs  rtree.rs  striped.rs
src/migrations/: v10.sql  v11.sql  v12.sql  v13.sql  v14.sql  v15.sql
