[package]
name = "temporal-index"
version = "0.1.0"
authors = ["Matteo Ceccarello <mceccarello@unibz.it>"]
edition = "2018"
build = "build.rs"  

[dependencies]
rand = "0.7"
rand_xoshiro = "0.4"
argh = "0.1"
rusqlite = { version = "0.23", features = ["bundled"] }
sha2 = "0.9"
chrono = "0.4"
dirs = "3.0"
log = "0.4"
pretty_env_logger = "0.4"
progress-logger = "0.2"
regex = "1.3"
anyhow = "1.0"
serde = "1.0"
serde_derive = "1.0"
serde_yaml = "0.8"
itertools = "0.9"
deepsize = "0.1"
sysinfo = "0.15"

[dev-dependencies]
paste = "1.0"

[build-dependencies]
vergen = "3"

[profile.release]
debug = true
